@@ -65,34 +65,37 @@ HB_FUNC( WXSIZER_ADD )
 {
 	wxh_ObjParams objParams = wxh_ObjParams();
 	wxSizer* sizer = (wxSizer *) objParams.Get_wxObject();
-
-	if( ISOBJECT( 1 ) )
+	
+	if(sizer)
 	{
-		wxObject* obj = (wxObject *) objParams.param( 1 );
-		if( obj->IsKindOf( CLASSINFO( wxWindow ) ) )
+		if( ISOBJECT( 1 ) )
 		{
-			if( hb_pcount() == 2 )
-				/*wxSizerItem* Add(wxWindow* window, const wxSizerFlags& flags)*/
-				sizer->Add( (wxWindow *) obj, ChkFlagInArray( 2 ) ) ;
-			else
-				/*wxSizerItem* Add(wxWindow* window, int proportion = 0,int flag = 0, int border = 0, wxObject* userData = NULL)*/
-				sizer->Add( (wxWindow *) obj, ISNIL( 2 ) ? 0 : hb_parnl( 2 ), ChkFlagInArray( 3 ), ISNIL( 4 ) ? 0 : hb_parnl( 4 ), ISNIL( 5 ) ? NULL : (wxObject *) objParams.param( 5 ) );
-		}
-		else
-			if( obj->IsKindOf( CLASSINFO( wxSizer ) ) )
+			wxObject* obj = (wxObject *) objParams.param( 1 );
+			if( obj->IsKindOf( CLASSINFO( wxWindow ) ) )
 			{
 				if( hb_pcount() == 2 )
-					/*wxSizerItem* Add(wxSizer* sizer, const wxSizerFlags& flags)*/
-					sizer->Add( (wxSizer *) objParams.paramChild( 1 ), ChkFlagInArray( 2 ) ) ;
+				/*wxSizerItem* Add(wxWindow* window, const wxSizerFlags& flags)*/
+					sizer->Add( (wxWindow *) obj, ChkFlagInArray( 2 ) ) ;
 				else
-					/*wxSizerItem* Add(wxSizer* sizer, int proportion = 0, int flag = 0, int border = 0, wxObject* userData = NULL)*/
-					sizer->Add( (wxSizer *) objParams.paramChild( 1 ), ISNIL( 2 ) ? 0 : hb_parnl( 2 ), ChkFlagInArray( 3 ), ISNIL( 4 ) ? 0 : hb_parnl( 4 ), ISNIL( 5 ) ? NULL : (wxObject *) objParams.param( 5 ) );
+				/*wxSizerItem* Add(wxWindow* window, int proportion = 0,int flag = 0, int border = 0, wxObject* userData = NULL)*/
+					sizer->Add( (wxWindow *) obj, ISNIL( 2 ) ? 0 : hb_parnl( 2 ), ChkFlagInArray( 3 ), ISNIL( 4 ) ? 0 : hb_parnl( 4 ), ISNIL( 5 ) ? NULL : (wxObject *) objParams.param( 5 ) );
 			}
-	}
-	else
-		if( ISNUM( 1 ) )
+			else
+				if( obj->IsKindOf( CLASSINFO( wxSizer ) ) )
+				{
+					if( hb_pcount() == 2 )
+					/*wxSizerItem* Add(wxSizer* sizer, const wxSizerFlags& flags)*/
+						sizer->Add( (wxSizer *) objParams.paramChild( 1 ), ChkFlagInArray( 2 ) ) ;
+					else
+					/*wxSizerItem* Add(wxSizer* sizer, int proportion = 0, int flag = 0, int border = 0, wxObject* userData = NULL)*/
+						sizer->Add( (wxSizer *) objParams.paramChild( 1 ), ISNIL( 2 ) ? 0 : hb_parnl( 2 ), ChkFlagInArray( 3 ), ISNIL( 4 ) ? 0 : hb_parnl( 4 ), ISNIL( 5 ) ? NULL : (wxObject *) objParams.param( 5 ) );
+				}
+		}
+		else
+			if( ISNUM( 1 ) )
 			/*wxSizerItem* Add(int width, int height, int proportion = 0, int flag = 0, int border = 0, wxObject* userData = NULL)*/
-			sizer->Add( hb_parnl( 1 ), hb_parnl( 2 ), ISNIL( 3 ) ? 0 : hb_parnl( 3 ), ChkFlagInArray( 4 ), ISNIL( 5 ) ? 0 : hb_parnl( 5 ), ISNIL( 6 ) ? NULL : (wxObject *) objParams.param( 6 ) );
+				sizer->Add( hb_parnl( 1 ), hb_parnl( 2 ), ISNIL( 3 ) ? 0 : hb_parnl( 3 ), ChkFlagInArray( 4 ), ISNIL( 5 ) ? 0 : hb_parnl( 5 ), ISNIL( 6 ) ? NULL : (wxObject *) objParams.param( 6 ) );
+	}
 }
 
 /*
